<resources>
    <string name="app_name" translatable="false">Archo Browser</string>
    <string name="actionbar_preferences_title">Settings</string>
    <string name="actionbar_preferences_download_opts_title">Download Options</string>
    <string name="content_description_toolbar_security">Security state of the website.</string>
    <string name="content_description_toolbar_favicon">The favicon of the website.</string>
    <string name="content_description_toolbar_cancel">Cancel URL editing.</string>
    <string name="content_description_toolbar_tabs">Switch browser tabs.</string>
    <string name="content_description_toolbar_menu">Show the browser menu.</string>
    <string name="dialog_delete_data_title">Completely delete browsing data?</string>
    <string name="dialog_delete_data_message">Are you sure you want to delete all of your browsing data? You cannot undo this once deleted.</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_ok">@android:string/ok</string>
    <string name="dialog_button_cancel">@android:string/cancel</string>
    <string name="preferences_category_web">Web</string>
    <string name="preferences_sw_render">Software rendering</string>
    <string name="preferences_sw_render_summary_on">Using software rendering, performance might be slow.</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_delete_data">Delete browsing data</string>
    <string name="preferences_delete_data_summary">Clear your saved bookmarks, history, and download entries</string>
    <string name="preferences_manage_site_permissions">Manage site permissions</string>
    <string name="preferences_download_opts">Download options</string>
    <string name="preferences_histbook">History &amp; Bookmarks</string>
    <string name="preferences_category_about">About</string>
    <string name="preferences_app">@string/app_name</string>
    <string name="preferences_app_summary">version 1.0.0</string>
    <string name="preferences_copyright">Copyright © 2022 GianXD</string>
    <string name="preferences_copyright_summary">Licensed under the BSD-3 Clause license</string>
    <string name="preferences_download_opts_location">Where to save</string>
    <string name="preferences_download_opts_hide_notif">Hide notification</string>
    <string name="toast_delete_browsing_data">Browsing data has been deleted.</string>
    <string name="toast_sw_render_warn">Software rendering is enabled, performance may be slower.</string>
    <string name="toolbar_url_hint">Type URL address or website</string>
</resources>